--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 
 <header>
   <!-- <a href="{{ "/" | relative_url }}" class="title">{{ site.title | escape }}</a> -->
+  <a class="title">{{ site.title | escape }}</a>
   {% include menu.html menu=pages %}
 </header>
 
