--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,7 @@
 {% endif %}
 
 <header>
-  <!-- <a href="{{ "/" | relative_url }}" class="title">{{ site.title | escape }}</a> -->
-  <a class="title">{{ site.title | escape }}</a>
+  <<a href="{{ "/" | relative_url }}" class="title">{{ site.title | escape }}</a>
   {% include menu.html menu=pages %}
 </header>
 
